# RAG

./: .gitignore  README.md  pyproject.toml
src/rag/: __init__.py
src/rag/llms/: __init__.py
src/rag/llms/chats/: __init__.py  glm4.py
tools/: chats.py  chats_ui.py
