[tool.poetry]
name = "rag"
version = "0.1.0"
description = ""
authors = ["zhhike <zhhike@qq.com>"]
readme = "README.md"
packages = [{include = "rag", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
triton = "^3.0.0"
torch = "^2.4.1"
torchvision = "^0.19.1"
torchaudio = "^2.4.1"
pandas = "^2.2.3"
openpyxl = "^3.1.5"
langchain = "^0.3.0"
langchain-core = "^0.3.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
