[tool.poetry]
name = "rag"
version = "0.1.0"
description = ""
authors = ["zhhike <zhhike@qq.com>"]
readme = "README.md"
packages = [{include = "rag", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
triton = "^3.0.0"
torch = "^2.4.1"
torchvision = "^0.19.1"
torchaudio = "^2.4.1"
pandas = "^2.2.3"
openpyxl = "^3.1.5"
langchain = "^0.3.0"
langchain-core = "^0.3.5"
transformers = "^4.44.2"
pudb = "^2024.1.2"
isort = "^5.13.2"
black = "^24.8.0"
rich = "^13.8.1"
modelscope = "^1.18.1"
tiktoken = "^0.7.0"
gpustat = "^1.1.1"
accelerate = "^0.34.2"
streamlit = "^1.38.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
